# PixelEngine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  PixelEngine.sln  README.md  一键更新最终输出.bat  一键构建.bat
.github/: actionlint.yaml
.github/workflows/: ci.yml  native-gpu-smoke.yml  release.yml
apps/PixelEngine.Editor.Shell/: AuthoringWorldPreviewRuntime.cs  EditorAssetAutomationJournal.cs  EditorAssetAutomationPreparation.cs  EditorAssetAutomationReferenceScanner.cs  EditorAssetBrowserDataSource.cs  EditorAssetChangeMonitor.cs  EditorAssetDropService.cs  EditorAssetFileTraversal.cs  EditorAssetManifestStore.cs  EditorAssetPreviewBuilder.cs  EditorAtomicTextFile.cs  EditorAudioPreviewService.cs  EditorAutomationAssetUndoAction.cs  EditorAutomationAuthoringApi.cs  EditorAutomationBuildApi.cs  EditorAutomationEventRouting.cs  EditorAutomationFrameCapture.cs  EditorAutomationMaterialsApi.cs  EditorAutomationProductApi.cs  EditorAutomationProjectPreparation.cs  EditorAutomationRecentProjectsApi.cs  EditorAutomationRuntime.cs  EditorAutomationSettingsPreparation.cs  EditorAutomationUiCommandMappings.cs  EditorAutomationWorldInspectorApi.cs  EditorAutomationWorldSavePreparation.cs  EditorBuiltInCanvasComponents.cs  EditorCodeWorkspaceOpenService.cs  EditorCommand.cs  EditorComponentModel.cs  EditorConsolePanel.cs  EditorConsoleScriptHotReloadDiagnosticSink.cs  EditorConsoleScriptRuntime.cs  EditorConsoleStore.cs  EditorDockLayoutValidator.cs  EditorExternalAssetDropConnector.cs  EditorFontAssets.cs  EditorGameObject.cs  EditorGameUiManifestAssetResolver.cs  EditorGameViewContract.cs  (+50 more)
bench/PixelEngine.Benchmarks/: AudioDispatchBenchmarks.cs  BenchmarkChunkSource.cs  CellThroughputBenchmark.cs  CoreAllocationBenchmarks.cs  CoreScalingBenchmark.cs  FullActiveCellThroughputBenchmark.cs  GameUiAllocationBenchmarks.cs  GcPauseBenchmark.cs  InfiniteTerrainChunkGenerationBenchmarks.cs  LavaMineReactionTemperatureBenchmarks.cs  Program.cs  (+16 more)
docs/: PixelEngine-Noita地图Parity矩阵.md  PixelEngine-原创Roguelite战役设计.md  PixelEngine-架构与需求设计.md  PixelEngine-核心目标与产品定位.md  editor-automation-api.md  evidence-2026-07-10-arch-001-custom-metric.md  evidence-2026-07-10-arch-002-api-boundary.md  evidence-2026-07-10-arch-003-task-fault-propagation.md  evidence-2026-07-10-arch-004-probe-facade.md  evidence-2026-07-10-arch-005-air-smoke-status.md  evidence-2026-07-10-ci-001-workflow-validation.md  evidence-2026-07-10-doc-002-legacy-plan-audit.md  evidence-2026-07-10-editor-preferences-ui-scale.md  evidence-2026-07-10-perf-001-benchmark-baseline.md  evidence-2026-07-10-perf-002-render-buffer.md  evidence-2026-07-10-perf-003-ca-throughput.md  evidence-2026-07-10-perf-004-zero-allocation.md  evidence-2026-07-10-perf-005-rigidbody-rebuild-pool.md  evidence-2026-07-10-perf-006-resident-chunk-batch.md  evidence-2026-07-10-perf-007-collapse-scratch.md  evidence-2026-07-10-perf-011-target-scene-gc.md  evidence-2026-07-10-target-hardware-matrix.md  evidence-2026-07-10-task-catalog-validation.md  evidence-2026-07-10-test-001-native-smoke.md  evidence-2026-07-11-ci-002-local-remediation.md  evidence-2026-07-11-doc-001-getting-started.md  evidence-2026-07-11-editor-007-scene-authoring.md  evidence-2026-07-11-editor-008-stability-workspace-localization.md  evidence-2026-07-11-editor-009-unity-interaction.md  evidence-2026-07-11-editor-010-vscode-project-workflow.md  evidence-2026-07-12-editor-003-unity-parity-cycle-01.md  evidence-2026-07-12-editor-003-unity-parity-cycle-02.md  evidence-2026-07-12-editor-003-unity-parity-cycle-03.md  evidence-2026-07-12-editor-003-unity-parity-cycle-04.md  evidence-2026-07-12-editor-003-unity-parity-cycle-05.md  evidence-2026-07-12-editor-003-unity-parity-cycle-06.md  evidence-2026-07-12-editor-003-unity-parity-cycle-07.md  evidence-2026-07-12-editor-003-unity-parity-cycle-08.md  evidence-2026-07-12-editor-003-unity-parity-cycle-09.md  evidence-2026-07-13-editor-003-unity-parity-cycle-10.md  (+40 more)
native/: CMakeLists.txt  CMakePresets.json  PixelEngine.Box2D.targets  PixelEngine.Native.targets  PixelEngine.UiNative.targets
native/ui_native/: CMakeLists.txt  PixelEngineUiNative.cpp  rmlui-patches.json
native/ui_native/patches/: rmlui-preserve-presentation-framebuffer.patch
plan/: 00-conventions-and-techstack.md  01-project-setup.md  02-core-infrastructure.md  03-simulation-kernel.md  04-materials-reactions-temperature.md  05-particles-lifecycle.md  06-physics-collision-rigidbody.md  07-world-streaming-serialization.md  08-rendering.md  09-gpu-compute.md  10-audio.md  11-scripting-system.md  12-editor-tooling-ui.md  13-demo-game.md  14-testing-benchmarking.md  15-build-packaging-distribution.md  16-performance-hardening.md  17-roadmap-execution-order.md  18-hosting-runtime.md  19-standalone-editor-app.md  20-interactive-html-ui.md  CODEX-HANDOFF.md  README.md
schema/: editor-automation-capabilities.schema.json  editor-automation-capabilities.v1.json  editor-automation-protocol.v1.schema.json
tests/: NativeSmokeFactAttribute.cs
tools/: aot-simd-probe.ps1  aot-simd-probe.sh  audit-release-artifacts.ps1  audit-release-artifacts.sh  benchmark-regression.ps1  build-native.ps1  build-native.sh  build-player.ps1  build-player.sh  build-product-icon.ps1  build-windows-installer.ps1  ci-matrix-evidence-preflight.ps1  codesign-macos.sh  coverage-policy.json  coverage.runsettings  demo-manual-acceptance-preflight.ps1  disassembly-guard.ps1  editor-ux-evidence-preflight.ps1  extract-noita-wang-terrain.ps1  gpu-particle-benchmark-preflight.ps1  hardware-counter-preflight.ps1  merge-coverage.ps1  native-gpu-runner-preflight.ps1  native-leak-preflight.ps1  package.ps1  package.sh  performance-target-evidence-preflight.ps1  publish-aot.ps1  publish-aot.sh  publish-r2r.ps1  publish-r2r.sh  release-evidence-preflight.ps1  release-evidence-preflight.sh  release-matrix.ps1  release-rids.json  run-benchmark.ps1  run-build-one-click.ps1  run-coverage.ps1  run-demo-playthrough.ps1  run-editor-automation-e2e.ps1  (+21 more)
(+1170 files in other folders)
