cmake_minimum_required(VERSION 3.22)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(Git REQUIRED)

if(MSVC)
  add_compile_options(/utf-8)
endif()

set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build third-party UI dependencies as static libraries" FORCE)
set(FT_DISABLE_ZLIB TRUE CACHE BOOL "Disable optional FreeType zlib dependency" FORCE)
set(FT_DISABLE_BZIP2 TRUE CACHE BOOL "Disable optional FreeType bzip2 dependency" FORCE)
set(FT_DISABLE_PNG TRUE CACHE BOOL "Disable optional FreeType png dependency" FORCE)
set(FT_DISABLE_HARFBUZZ TRUE CACHE BOOL "Disable optional FreeType harfbuzz dependency" FORCE)
set(FT_DISABLE_BROTLI TRUE CACHE BOOL "Disable optional FreeType brotli dependency" FORCE)
set(SKIP_INSTALL_ALL TRUE CACHE BOOL "Do not install vendored FreeType artifacts" FORCE)

add_subdirectory("${PIXELENGINE_FREETYPE_SOURCE_DIR}" "${CMAKE_BINARY_DIR}/freetype")
if(NOT TARGET Freetype::Freetype)
  add_library(Freetype::Freetype ALIAS freetype-interface)
endif()

set(RMLUI_FONT_ENGINE "freetype" CACHE STRING "Use FreeType font engine" FORCE)
set(RMLUI_SAMPLES OFF CACHE BOOL "Disable RmlUi samples" FORCE)
set(RMLUI_LUA_BINDINGS OFF CACHE BOOL "Disable RmlUi Lua bindings" FORCE)
set(RMLUI_LOTTIE_PLUGIN OFF CACHE BOOL "Disable RmlUi Lottie plugin" FORCE)
set(RMLUI_SVG_PLUGIN OFF CACHE BOOL "Disable RmlUi SVG plugin" FORCE)
set(RMLUI_PRECOMPILED_HEADERS OFF CACHE BOOL "Disable RmlUi precompiled headers in superbuild" FORCE)
set(RMLUI_WARNINGS_AS_ERRORS OFF CACHE BOOL "Do not treat third-party warnings as errors" FORCE)
set(RMLUI_INSTALL_LICENSES_AND_BUILD_INFO OFF CACHE BOOL "Do not install RmlUi build info" FORCE)

add_subdirectory("${PIXELENGINE_RMLUI_SOURCE_DIR}" "${CMAKE_BINARY_DIR}/rmlui")

set(PIXELENGINE_RMLUI_PATCH_MANIFEST "${CMAKE_CURRENT_SOURCE_DIR}/rmlui-patches.json")
file(READ "${PIXELENGINE_RMLUI_PATCH_MANIFEST}" PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON)
string(JSON PIXELENGINE_RMLUI_PATCH_SCHEMA GET "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" schemaVersion)
if(NOT PIXELENGINE_RMLUI_PATCH_SCHEMA EQUAL 1)
  message(FATAL_ERROR "Unsupported RmlUi patch manifest schema: ${PIXELENGINE_RMLUI_PATCH_SCHEMA}")
endif()

string(JSON PIXELENGINE_RMLUI_BASE_COMMIT GET "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" baseCommit)
string(LENGTH "${PIXELENGINE_RMLUI_BASE_COMMIT}" PIXELENGINE_RMLUI_BASE_COMMIT_LENGTH)
if(NOT PIXELENGINE_RMLUI_BASE_COMMIT_LENGTH EQUAL 40 OR
    NOT PIXELENGINE_RMLUI_BASE_COMMIT MATCHES "^[0-9a-f]+$")
  message(FATAL_ERROR "RmlUi patch manifest baseCommit must be a lowercase 40-character Git SHA.")
endif()
if(EXISTS "${PIXELENGINE_RMLUI_SOURCE_DIR}/.git")
  execute_process(
    COMMAND "${GIT_EXECUTABLE}" -C "${PIXELENGINE_RMLUI_SOURCE_DIR}" rev-parse HEAD
    RESULT_VARIABLE PIXELENGINE_RMLUI_REV_PARSE_RESULT
    OUTPUT_VARIABLE PIXELENGINE_RMLUI_ACTUAL_COMMIT
    ERROR_VARIABLE PIXELENGINE_RMLUI_REV_PARSE_ERROR
    OUTPUT_STRIP_TRAILING_WHITESPACE
  )
  if(NOT PIXELENGINE_RMLUI_REV_PARSE_RESULT EQUAL 0 OR
      NOT PIXELENGINE_RMLUI_ACTUAL_COMMIT STREQUAL PIXELENGINE_RMLUI_BASE_COMMIT)
    message(FATAL_ERROR
      "RmlUi source commit does not match patch manifest base ${PIXELENGINE_RMLUI_BASE_COMMIT}: "
      "${PIXELENGINE_RMLUI_ACTUAL_COMMIT} ${PIXELENGINE_RMLUI_REV_PARSE_ERROR}")
  endif()
endif()

set(PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR "${CMAKE_CURRENT_BINARY_DIR}/rmlui-backend-overlay")
file(REMOVE_RECURSE "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}")
file(MAKE_DIRECTORY "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}")

string(JSON PIXELENGINE_RMLUI_BASE_FILE_COUNT LENGTH "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" baseFiles)
if(PIXELENGINE_RMLUI_BASE_FILE_COUNT LESS 1)
  message(FATAL_ERROR "RmlUi patch manifest must identify at least one base file.")
endif()
math(EXPR PIXELENGINE_RMLUI_BASE_FILE_LAST "${PIXELENGINE_RMLUI_BASE_FILE_COUNT} - 1")
foreach(PIXELENGINE_RMLUI_BASE_FILE_INDEX RANGE 0 ${PIXELENGINE_RMLUI_BASE_FILE_LAST})
  string(JSON PIXELENGINE_RMLUI_BASE_FILE_PATH GET
    "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" baseFiles ${PIXELENGINE_RMLUI_BASE_FILE_INDEX} path)
  string(JSON PIXELENGINE_RMLUI_BASE_FILE_EXPECTED_SHA256 GET
    "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" baseFiles ${PIXELENGINE_RMLUI_BASE_FILE_INDEX} sha256)
  string(LENGTH "${PIXELENGINE_RMLUI_BASE_FILE_EXPECTED_SHA256}" PIXELENGINE_RMLUI_BASE_FILE_SHA256_LENGTH)
  if(IS_ABSOLUTE "${PIXELENGINE_RMLUI_BASE_FILE_PATH}" OR
      PIXELENGINE_RMLUI_BASE_FILE_PATH MATCHES "(^|/)\\.\\.(/|$)" OR
      NOT PIXELENGINE_RMLUI_BASE_FILE_SHA256_LENGTH EQUAL 64 OR
      NOT PIXELENGINE_RMLUI_BASE_FILE_EXPECTED_SHA256 MATCHES "^[0-9a-f]+$")
    message(FATAL_ERROR "RmlUi patch manifest contains an unsafe base file path or invalid SHA256.")
  endif()
  set(PIXELENGINE_RMLUI_BASE_FILE_SOURCE "${PIXELENGINE_RMLUI_SOURCE_DIR}/${PIXELENGINE_RMLUI_BASE_FILE_PATH}")
  if(NOT EXISTS "${PIXELENGINE_RMLUI_BASE_FILE_SOURCE}")
    message(FATAL_ERROR "RmlUi patch base file is missing: ${PIXELENGINE_RMLUI_BASE_FILE_PATH}")
  endif()
  file(SHA256 "${PIXELENGINE_RMLUI_BASE_FILE_SOURCE}" PIXELENGINE_RMLUI_BASE_FILE_ACTUAL_SHA256)
  string(TOLOWER "${PIXELENGINE_RMLUI_BASE_FILE_ACTUAL_SHA256}" PIXELENGINE_RMLUI_BASE_FILE_ACTUAL_SHA256)
  if(NOT PIXELENGINE_RMLUI_BASE_FILE_ACTUAL_SHA256 STREQUAL PIXELENGINE_RMLUI_BASE_FILE_EXPECTED_SHA256)
    message(FATAL_ERROR
      "RmlUi patch base SHA256 mismatch for ${PIXELENGINE_RMLUI_BASE_FILE_PATH}: "
      "expected ${PIXELENGINE_RMLUI_BASE_FILE_EXPECTED_SHA256}, got ${PIXELENGINE_RMLUI_BASE_FILE_ACTUAL_SHA256}")
  endif()

  get_filename_component(PIXELENGINE_RMLUI_BASE_FILE_DIRECTORY "${PIXELENGINE_RMLUI_BASE_FILE_PATH}" DIRECTORY)
  file(MAKE_DIRECTORY "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}/${PIXELENGINE_RMLUI_BASE_FILE_DIRECTORY}")
  file(COPY_FILE
    "${PIXELENGINE_RMLUI_BASE_FILE_SOURCE}"
    "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}/${PIXELENGINE_RMLUI_BASE_FILE_PATH}"
    ONLY_IF_DIFFERENT
  )
  set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${PIXELENGINE_RMLUI_BASE_FILE_SOURCE}")
endforeach()

string(JSON PIXELENGINE_RMLUI_PATCH_COUNT LENGTH "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" patches)
if(PIXELENGINE_RMLUI_PATCH_COUNT LESS 1)
  message(FATAL_ERROR "RmlUi patch manifest must identify at least one patch.")
endif()
math(EXPR PIXELENGINE_RMLUI_PATCH_LAST "${PIXELENGINE_RMLUI_PATCH_COUNT} - 1")
foreach(PIXELENGINE_RMLUI_PATCH_INDEX RANGE 0 ${PIXELENGINE_RMLUI_PATCH_LAST})
  string(JSON PIXELENGINE_RMLUI_PATCH_PATH GET
    "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" patches ${PIXELENGINE_RMLUI_PATCH_INDEX} path)
  string(JSON PIXELENGINE_RMLUI_PATCH_EXPECTED_SHA256 GET
    "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" patches ${PIXELENGINE_RMLUI_PATCH_INDEX} sha256)
  string(LENGTH "${PIXELENGINE_RMLUI_PATCH_EXPECTED_SHA256}" PIXELENGINE_RMLUI_PATCH_SHA256_LENGTH)
  if(IS_ABSOLUTE "${PIXELENGINE_RMLUI_PATCH_PATH}" OR
      PIXELENGINE_RMLUI_PATCH_PATH MATCHES "(^|/)\\.\\.(/|$)" OR
      NOT PIXELENGINE_RMLUI_PATCH_SHA256_LENGTH EQUAL 64 OR
      NOT PIXELENGINE_RMLUI_PATCH_EXPECTED_SHA256 MATCHES "^[0-9a-f]+$")
    message(FATAL_ERROR "RmlUi patch manifest contains an unsafe patch path or invalid SHA256.")
  endif()
  set(PIXELENGINE_RMLUI_PATCH_FILE "${CMAKE_CURRENT_SOURCE_DIR}/${PIXELENGINE_RMLUI_PATCH_PATH}")
  if(NOT EXISTS "${PIXELENGINE_RMLUI_PATCH_FILE}")
    message(FATAL_ERROR "RmlUi integration patch is missing: ${PIXELENGINE_RMLUI_PATCH_PATH}")
  endif()
  file(SHA256 "${PIXELENGINE_RMLUI_PATCH_FILE}" PIXELENGINE_RMLUI_PATCH_ACTUAL_SHA256)
  string(TOLOWER "${PIXELENGINE_RMLUI_PATCH_ACTUAL_SHA256}" PIXELENGINE_RMLUI_PATCH_ACTUAL_SHA256)
  if(NOT PIXELENGINE_RMLUI_PATCH_ACTUAL_SHA256 STREQUAL PIXELENGINE_RMLUI_PATCH_EXPECTED_SHA256)
    message(FATAL_ERROR
      "RmlUi integration patch SHA256 mismatch for ${PIXELENGINE_RMLUI_PATCH_PATH}: "
      "expected ${PIXELENGINE_RMLUI_PATCH_EXPECTED_SHA256}, got ${PIXELENGINE_RMLUI_PATCH_ACTUAL_SHA256}")
  endif()

  execute_process(
    COMMAND "${CMAKE_COMMAND}" -E env "GIT_CEILING_DIRECTORIES=${CMAKE_BINARY_DIR}"
      "${GIT_EXECUTABLE}" apply --no-index --check --whitespace=error-all "${PIXELENGINE_RMLUI_PATCH_FILE}"
    WORKING_DIRECTORY "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}"
    RESULT_VARIABLE PIXELENGINE_RMLUI_PATCH_CHECK_RESULT
    OUTPUT_VARIABLE PIXELENGINE_RMLUI_PATCH_CHECK_OUTPUT
    ERROR_VARIABLE PIXELENGINE_RMLUI_PATCH_CHECK_ERROR
  )
  if(NOT PIXELENGINE_RMLUI_PATCH_CHECK_RESULT EQUAL 0)
    message(FATAL_ERROR
      "RmlUi integration patch check failed for ${PIXELENGINE_RMLUI_PATCH_PATH}: "
      "${PIXELENGINE_RMLUI_PATCH_CHECK_OUTPUT} ${PIXELENGINE_RMLUI_PATCH_CHECK_ERROR}")
  endif()
  execute_process(
    COMMAND "${CMAKE_COMMAND}" -E env "GIT_CEILING_DIRECTORIES=${CMAKE_BINARY_DIR}"
      "${GIT_EXECUTABLE}" apply --no-index --whitespace=error-all "${PIXELENGINE_RMLUI_PATCH_FILE}"
    WORKING_DIRECTORY "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}"
    RESULT_VARIABLE PIXELENGINE_RMLUI_PATCH_APPLY_RESULT
    OUTPUT_VARIABLE PIXELENGINE_RMLUI_PATCH_APPLY_OUTPUT
    ERROR_VARIABLE PIXELENGINE_RMLUI_PATCH_APPLY_ERROR
  )
  if(NOT PIXELENGINE_RMLUI_PATCH_APPLY_RESULT EQUAL 0)
    message(FATAL_ERROR
      "RmlUi integration patch apply failed for ${PIXELENGINE_RMLUI_PATCH_PATH}: "
      "${PIXELENGINE_RMLUI_PATCH_APPLY_OUTPUT} ${PIXELENGINE_RMLUI_PATCH_APPLY_ERROR}")
  endif()
  set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${PIXELENGINE_RMLUI_PATCH_FILE}")
endforeach()

string(JSON PIXELENGINE_RMLUI_RESULT_FILE_COUNT LENGTH "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" resultFiles)
if(PIXELENGINE_RMLUI_RESULT_FILE_COUNT LESS 1)
  message(FATAL_ERROR "RmlUi patch manifest must identify at least one patched result file.")
endif()
math(EXPR PIXELENGINE_RMLUI_RESULT_FILE_LAST "${PIXELENGINE_RMLUI_RESULT_FILE_COUNT} - 1")
foreach(PIXELENGINE_RMLUI_RESULT_FILE_INDEX RANGE 0 ${PIXELENGINE_RMLUI_RESULT_FILE_LAST})
  string(JSON PIXELENGINE_RMLUI_RESULT_FILE_PATH GET
    "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" resultFiles ${PIXELENGINE_RMLUI_RESULT_FILE_INDEX} path)
  string(JSON PIXELENGINE_RMLUI_RESULT_FILE_EXPECTED_SHA256 GET
    "${PIXELENGINE_RMLUI_PATCH_MANIFEST_JSON}" resultFiles ${PIXELENGINE_RMLUI_RESULT_FILE_INDEX} sha256)
  string(LENGTH "${PIXELENGINE_RMLUI_RESULT_FILE_EXPECTED_SHA256}" PIXELENGINE_RMLUI_RESULT_FILE_SHA256_LENGTH)
  if(IS_ABSOLUTE "${PIXELENGINE_RMLUI_RESULT_FILE_PATH}" OR
      PIXELENGINE_RMLUI_RESULT_FILE_PATH MATCHES "(^|/)\\.\\.(/|$)" OR
      NOT PIXELENGINE_RMLUI_RESULT_FILE_SHA256_LENGTH EQUAL 64 OR
      NOT PIXELENGINE_RMLUI_RESULT_FILE_EXPECTED_SHA256 MATCHES "^[0-9a-f]+$")
    message(FATAL_ERROR "RmlUi patch manifest contains an unsafe result file path or invalid SHA256.")
  endif()
  set(PIXELENGINE_RMLUI_RESULT_FILE
    "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}/${PIXELENGINE_RMLUI_RESULT_FILE_PATH}")
  if(NOT EXISTS "${PIXELENGINE_RMLUI_RESULT_FILE}")
    message(FATAL_ERROR "RmlUi patched result file is missing: ${PIXELENGINE_RMLUI_RESULT_FILE_PATH}")
  endif()
  file(SHA256 "${PIXELENGINE_RMLUI_RESULT_FILE}" PIXELENGINE_RMLUI_RESULT_FILE_ACTUAL_SHA256)
  string(TOLOWER "${PIXELENGINE_RMLUI_RESULT_FILE_ACTUAL_SHA256}" PIXELENGINE_RMLUI_RESULT_FILE_ACTUAL_SHA256)
  if(NOT PIXELENGINE_RMLUI_RESULT_FILE_ACTUAL_SHA256 STREQUAL PIXELENGINE_RMLUI_RESULT_FILE_EXPECTED_SHA256)
    message(FATAL_ERROR
      "RmlUi patched result SHA256 mismatch for ${PIXELENGINE_RMLUI_RESULT_FILE_PATH}: "
      "expected ${PIXELENGINE_RMLUI_RESULT_FILE_EXPECTED_SHA256}, got ${PIXELENGINE_RMLUI_RESULT_FILE_ACTUAL_SHA256}")
  endif()
endforeach()
set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${PIXELENGINE_RMLUI_PATCH_MANIFEST}")

add_library(pixelengine_ui_native SHARED
  PixelEngineUiNative.cpp
  "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}/Backends/RmlUi_Renderer_GL3.cpp"
)

target_include_directories(pixelengine_ui_native
  PRIVATE
    "${PIXELENGINE_RMLUI_BACKEND_OVERLAY_DIR}/Backends"
    "${PIXELENGINE_RMLUI_SOURCE_DIR}/Backends"
)

target_link_libraries(pixelengine_ui_native
  PRIVATE
    rmlui_core
    rmlui_debugger
)

target_compile_features(pixelengine_ui_native PRIVATE cxx_std_17)
target_compile_definitions(pixelengine_ui_native PRIVATE PIXELENGINE_UI_NATIVE_EXPORTS)

set_target_properties(pixelengine_ui_native PROPERTIES
  OUTPUT_NAME "PixelEngine.UI.Native"
  RUNTIME_OUTPUT_DIRECTORY "${PIXELENGINE_NATIVE_OUT_DIR}/shared"
  LIBRARY_OUTPUT_DIRECTORY "${PIXELENGINE_NATIVE_OUT_DIR}/shared"
  ARCHIVE_OUTPUT_DIRECTORY "${PIXELENGINE_NATIVE_OUT_DIR}/shared"
)
